--- a/clubok_fe/app/less/AuthorizationPage.less
+++ b/clubok_fe/app/less/AuthorizationPage.less
@@ -123,7 +123,7 @@ input, textarea {
   font-size:22px;
   display:block;
   width:100%;
-  height:100%;
+  height:auto;
   padding:5px 10px;
   background:none;
   background-image:none;
