--- a/clubok_fe/app/less/AuthorizationPage.less
+++ b/clubok_fe/app/less/AuthorizationPage.less
@@ -1,193 +1,172 @@
 //@import (reference) "app.less";
 
-@body-bg: #c1bdba;
-@form-bg: #13232f;
-@white: #ffffff;
-
-@main: #1ab188;
-@main-light: lighten(@main,5%);
-@main-dark: darken(@main,5%);
-
-@gray-light: #a0b3b0;
-@gray: #ddd;
-
-@thin: 300;
-@normal: 400;
-@bold: 600;
-@br: 4px;
-
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-html {
-  overflow-y: scroll;
+.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(249,206,50);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 body {
-  background:@body-bg;
-  font-family: 'Titillium Web', sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
-a {
-  text-decoration:none;
-  color:@main;
-  transition:.5s ease;
-  &:hover {
-    color:@main-dark;
-  }
+.search {
+  width: 150px;
+  height: 25px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 10px;
+  margin-left: 100px;
+  border: 1px solid #CCC;
+  border-radius: 5px;
+  margin-right: 15%;
+  margin-top: 5px;
+  /*margin-bottom: 10px;*/
+  position: absolute;
+  font-size: 15px;
+  display: inline;
 }
 
-.form {
-  background: @form-bg;
-  padding: 40px;
-  max-width:600px;
-  margin:40px auto;
-  border-radius:@br;
-  box-shadow:0 4px 10px 4px @form-bg;
+.row {
+  padding-top: 50px;
 }
 
-.tab-group {
-  list-style:none;
-  padding:0;
-  margin:0 0 40px 0;
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  li a {
-    display:block;
-    text-decoration:none;
-    padding:15px;
-    background:@gray-light;
-    color:@gray-light;
-    font-size:20px;
-    float:left;
-    width:50%;
-    text-align:center;
-    cursor:pointer;
-    transition:.5s ease;
-    &:hover {
-      background:@main-dark;
-      color:@white;
-    }
-  }
-  .active a {
-    background:@main;
-    color:@white;
-  }
+.btn {
+  border: none;
+  background-color: inherit;
+  font-size: 20px;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Comic Sans MS";
+  color: white;
+  margin-left: 10%;
+  position: relative;
+  display: inline-block;
+
 }
 
-.tab-content > div:last-child {
-  display:none;
+.row button {
+  width: 274px;
+  height: 29px;
+  cursor: pointer;
+  display: block;
+  border-radius: 5px;
+  border-width: 0px;
+  background-color: rgb(94,177,89);
+  color: white;
+  font-size: 15px;
+}
+
+* {
+  box-sizing: border-box;
+}
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 500px; /* Should be removed. Only for demonstration */
+  margin-top: 100px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 
-h1 {
-  text-align:center;
-  color:@white;
-  font-weight:@thin;
-  margin:0 0 40px;
+form {
+  padding: 10px;
+  margin-left: 150px;
+  margin-bottom: 10px;
+  margin-right: 170px;
+  position: inherit;
+
 }
 
-label {
-  position:absolute;
-  transform:translateY(6px);
-  left:13px;
-  color:@white;
-  transition:all 0.25s ease;
-  -webkit-backface-visibility: hidden;
-  pointer-events: none;
-  font-size:22px;
-  .req {
-    margin:2px;
-    color:@main;
-  }
+#login {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(227,228,232);
+  border-radius: 5px;
+  background-color: white;
+  margin-bottom: 50px;
+  position: absolute;
 }
 
-label.active {
-  transform:translateY(50px);
-  left:2px;
-  font-size:14px;
-  .req {
-    opacity:0;
-  }
+#register {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(227,228,232);
+  border-radius: 5px;
+  background-color: white;
+  position: absolute;
+  margin-top: 180px;
 }
 
-label.highlight {
-  color:@white;
+.reg-ques {
+  text-align: center;
+  font-family: Helvetica;
+  font-size: 20px;
+  margin-bottom: 0px;
+
 }
 
-input, textarea {
-  font-size:22px;
-  display:block;
-  width:100%;
-  height:auto;
-  padding:5px 10px;
-  background:none;
-  background-image:none;
-  border:1px solid @gray-light;
-  color:@white;
-  border-radius:0;
-  transition:border-color .25s ease, box-shadow .25s ease;
-  &:focus {
-    outline:0;
-    border-color:@main;
-  }
+.reg-ans {
+  text-align: center;
+  font-family: Helvetica;
+  color: rgb(101, 101, 101);
+  font-size: 12.5px;
+  padding: 5px 0px 21px;
 }
 
-textarea {
-  border:2px solid @gray-light;
-  resize: vertical;
+.row input {
+  padding: 2px;
+  width: 270px;
+  height: 25px;
+  border:1px solid #CCC;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-bottom: 15px;
+  display: block;
+  margin-right: 10px;
 }
 
-.field-wrap {
-  position:relative;
-  margin-bottom:40px;
+
+
+.image {
+  text-align: center;
+  background-color: white;
+  margin-left: auto;
+  position: relative;
+  height: 400px;
+  width: 500px;
+  position: relative;
 }
 
-.top-row {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+.footer {
+  padding-left: 170px;
+  margin-bottom: 50px;
 
-  > div {
-    float:left;
-    width:48%;
-    margin-right:4%;
-    &:last-child {
-      margin:0;
-    }
-  }
 }
 
-.button {
-  border:0;
-  outline:none;
-  border-radius:0;
-  padding:15px 0;
-  font-size:2rem;
-  font-weight:@bold;
-  text-transform:uppercase;
-  letter-spacing:.1em;
-  background:@main;
-  color:@white;
-  transition:all.5s ease;
-  -webkit-appearance: none;
-  &:hover, &:focus {
-    background:@main-dark;
-  }
+.footer ul {
+  display: block;
 }
 
-.button-block {
-  display:block;
-  width:100%;
+
+hr {
+  margin-top: 120px;
+  width: 90%;
+
 }
 
-.forgot {
-  margin-top:-20px;
-  text-align:right;
-}
