--- a/Design/styles/club.css
+++ b/Design/styles/club.css
@@ -1,7 +1,110 @@
-body {
-  padding: 0;
-  margin: 0;
+* {
+    box-sizing: border-box;
 }
+
+body {
+   margin: 0;
+   padding: 0;
+   background: #EEE;
+   font: 10px/13px 'Lucida Sans',sans-serif;
+}
+
+.header {
+    margin-top: 37px;  
+    background-color: lightblue;
+    
+/*    background-image: url(https://hipo.kz/uploads/company/20160302121737.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-size: contain;*/
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+}
+
+.header img {
+         object-fit: contain;
+
+}
+
+.sidenav {
+    float: left;
+    height: 100%;
+    width: 200px;
+    position: relative;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+}
+
+
+/* Side navigation links */
+.sidenav a {
+    color: white;
+    padding: 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color on hover */
+.sidenav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the content */
+.content {
+    margin-left: 200px;
+    padding-left: 20px;
+    overflow: hidden;
+    /*margin: 0px 10px 10px 10px;*/
+}
+
+.box {
+  float: left;
+  position: relative;
+  width: 20%;
+  padding-bottom: 20%;
+}
+.box-inner {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 10px;
+  bottom: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+   /*border-style: solid;*/
+   /*border-width: 1px;*/
+   /*text-align: center;*/
+    
+}
+.club-img {
+   width: 100%;
+   height: 80%;
+   object-fit: cover;
+
+}
+
+.club-name {
+    text-align: center;
+    padding-top: 10px;
+    font-size: 15px;
+
+}
+
+
+
+.footer {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+}
+
 
 .navbar {
   list-style-type: none;
@@ -85,8 +188,4 @@ body {
     margin-top: 10px;
     float: right;
     position: static;
-}
-
-hr {
-  display: inline-block;
 }
