--- a/Design/styles/login.css
+++ b/Design/styles/login.css
@@ -101,6 +101,14 @@ form {
   position: absolute;
 }
 
+.log-st {
+  text-align: center;
+  font-family: Helvetica;
+  font-size: 20px;
+  margin-bottom: 20px;
+
+}
+
 #register {
   border-style: solid;
   border-width: 2px;
